Refactored frontend app entry

--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mishos</title>
     <link rel="stylesheet" href="./src/styles/index.css" />
-    <script type="module" src="/src/app-router.ts"></script>
+    <script type="module" src="/src/app-entry.ts"></script>
   </head>
   <body>
-    <app-router></app-router>
+    <app-entry></app-entry>
   </body>
 </html>
